Cherry pick fom lobby/ui to fix popup UI after incorrect merge. 1. add theme color 2. wrap the roomlist div to clip the scroll-bar

--- a/src/styles/_theme.scss
+++ b/src/styles/_theme.scss
@@ -10,9 +10,8 @@
 */
 
 $accent: white;
-$accentDark: white;
+$accentDark: rgba(255, 255, 255, 0.454);
 $textColor: black;
-$background: #C9D7DD;
 $stroke: #637A9F;
 //
 $background: rgba(255, 252, 245, 1);
